# HardFuzz

./: .gitignore  HardFuzz_Refined_Plan.md  LICENSE  Makefile  README.md
app/: .gitignore  README.md  pubspec.yaml
app/lib/: hardfuzz_ble.dart  main.dart  models.dart  report.dart  store.dart
constraints/: cmod_a7.xdc
docs/: HardFuzz_v1_Spec.md  HardFuzz_v2_BringUp.md  HardFuzz_v2_Standalone.md  timing-verification.md  vivado-cloud.md  waveforms.md
firmware/: Makefile  README.md  stm32f446.ld
firmware/esp32/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
firmware/src/: main.c  main_i2c.c  main_multi.c  startup_stm32f446.c
hardware/: .gitignore  README.md  bom.csv  kicad_parts.md  schematic_design.md
hardware/hardfuzz_v1/: .gitignore  board.kicad_sch  can.kicad_sch  esp32.kicad_sch  fpga.kicad_sch  hardfuzz_v1.kicad_pcb  hardfuzz_v1.kicad_pro  hardfuzz_v1.kicad_sch  levelshift.kicad_sch  power.kicad_sch  (+1 more)
host/: CMakeLists.txt  Makefile  README.md  arm.py
host/campaigns/: example.json  gen_i2c_sweep.py  gen_spi_sweep.py  i2c.json  i2c_sweep.json  multi.json  spi_sweep.json
host/include/hardfuzz/: campaign.hpp  coverage.hpp  dut_serial.hpp  fault.hpp  json.hpp  reg_client.hpp  report.hpp  transport.hpp
host/src/: hardfuzz_cli.cpp
host/test/: test_campaign.cpp
rtl/: can_inject_top.v  hardfuzz_top.v  i2c_inject_top.v  multi_inject_top.v  spi_inject_top.v
scripts/: build.tcl  program.tcl
sim/: run_icarus.sh  tb_can_inject.v  tb_ctrl_regs.v  tb_i2c_inject.v  tb_multi_inject.v  tb_pulse_meter.v  tb_spi_inject.v  tb_uart_echo.v
(+19 files in other folders)
